quick fix for font sizing error on mobile

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -117,7 +117,7 @@
     margin-left: 80px;
     color: #fff;
 	line-height: 1.2;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: bold;
     text-align: left;
     background-color: #747d84;
